--- a/public/dashboard.css
+++ b/public/dashboard.css
@@ -3,220 +3,130 @@
  */
 
 /* Move down content because we have a fixed navbar that is 50px tall */
+
+html, body{
+      height:100%;
+      width:100%;
+      padding:0px;
+      margin:0px;
+}
+
 body {
+  padding-left: 0%;
+  padding-right: 0%;
   padding-top: 50px;
+  background-image: url(images/gris_005.jpg);
 }
 
-
-/*
- * Global add-ons
- */
-.sub-header {
-  padding-bottom: 10px;
-  border-bottom: 1px solid #eee;
-}
-.navbar-apisense{
-  background-color: #222;
-  border-color: #080808;
-}
-.navbar-apisense .navbar-brand{
-  color: #FFA349;
-}
-.navbar-apisense .navbar-brand:hover{
-  color: #FE7D00;
+#navBar {
+  padding-top: 0px;
 }
 
+#h2menu {
+  margin-top: 10px;
+}
 
-/*
- * Sidebar
- */
+#pPick {
+  font-size: 16px;
+  /* color: #EB9100; */
+  font-weight: bold;
+ /* background-color: white; */
+}
 
-/* Hide for mobile, show later */
-.sidebar {
+.centerColor {
+  padding-top:5px; padding-bottom: 5px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 30%;
+  background-color: #b0e0e6; /*  b0e0e6 */ /* EB9100 */ 
+  border-radius: 5px;
+}
+
+.left {
+  float: left;
+  margin-left: 30px;
+  width : 40%;
+}
+
+#rightTab {
+  float: right;
+  margin-right : 50px;
+  width: 50%;
+}
+
+#rightTab2 {
   display: none;
 }
-@media (min-width: 768px) {
-  .sidebar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    z-index: 1000;
-    display: block;
-    padding: 70px 20px 20px;
-    background-color: #f5f5f5;
-    border-right: 1px solid #eee;
-  }
+
+#button-wrapper {
+    padding-right: 4px;
+    position: relative;
+    top: 10px;
+    width: 100%;
+    z-index: 10000;
 }
 
-/* Sidebar navigation */
-.nav-sidebar {
-  margin-left: -20px;
-  margin-right: -21px; /* 20px padding + 1px border */
-  margin-bottom: 20px;
-}
-.nav-sidebar > li > a {
-  padding-left: 20px;
-  padding-right: 20px;
-}
-.nav-sidebar > .active > a {
-  color: #fff;
-  background-color: #428bca;
+#butCluster {
+  margin-top: 5px;
+  margin-right: 10px;
 }
 
-
-/*
- * Main content
- */
-.main {
-  padding: 20px;
-}
-@media (min-width: 768px) {
-  .main {
-    padding-left: 40px;
-    padding-right: 40px;
-  }
-}
-.main .page-header {
-  margin-top: 0;
-}
-.page-header {
-  text-align: right;
+#vr {
+  position: absolute;
+  width: 4px;
+  height: 200px;
 }
 
-
-/*
- * Placeholder dashboard ideas
- */
-.placeholders {
-  margin-bottom: 30px;
+select, option {
   text-align: center;
-}
-.placeholders h4 {
-  margin-bottom: 0;
-}
-.placeholder {
-  margin-bottom: 20px;
-}
-.placeholder img {
-  border-radius: 50%;
+  font-weight: bold;
 }
 
 /*
  * Leaflet map
  */
 #map{
-  height: 100%;
-}
-#map-anchor{
-  height: 350px;
-  margin-bottom: 20px;
-}
-.hresize{
-  width: 100%;
-  height: 8px;
-  background: url(images/handle-h.png) no-repeat center bottom;
+  border: 1px solid black;
+  margin-left: 30px;
+  width: 40%;
+  height: 60%;
 }
 
 /*
- * Range slider
+ * Slider
  */
- #slider{
-  margin-top: 10px;
- }
-.ui-rangeSlider,
-.ui-rangeSlider-container{
-  height: 16px;
-}
-.ui-rangeSlider{
-  padding-top: 26px;
-}
-.ui-rangeSlider-noArrow .ui-rangeSlider-container,
-.ui-rangeSlider-container{
-  background: #f5f5f5;
-  -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
-  box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
-  border:0;
-}
-.ui-rangeSlider-bar{
-  height: 15px;
-  background: #f0ad4e;
-  -webkit-box-shadow: none;
-  box-shadow: none;
-}
-.ui-rangeSlider-label{
-  bottom: 28px;
-  padding: 2px 8px;
-  color: #333;
-  background: #fff;
-  border: 1px solid #e1e1e8;
-  -web-box-shadow: 0 1px 0 #e1e1e8;
-  box-shadow: 0 1px 0 #e1e1e8;
-}
-.ui-rangeSlider-label-inner{
-  border-left: 10px solid transparent;
-  border-right: 10px solid transparent;
-  border-top:10px solid #e1e1e8;
+#slider{
+  padding-top: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
 }
 
-/**
- * Left legend
- */
-.progress{
-  margin-bottom: 5px;
-}
-.progress-bar-header-img{
-  text-align: right;
-}
-.progress-bar-plane{
-  background-color: #333;
-}
-.progress-bar-car{
-  background-color: #d9534f;
-}
-.progress-bar-bus{
-  background-color: #f0ad4e;
-}
-.progress-bar-train{
-  background-color: #5bc0de;
-}
+/* When the screen width is under 1024px */
+@media screen and (max-width: 1024px) {
+  #map {
+    margin-left: auto;
+    margin-right: auto;
+    width: 90%;
+    height: 60%;
+  }
 
-/**
- * Reports table
- */
-.bg-table-car{
-  background-color: #f2dede;
-}
-.bg-table-train{
-  background-color: #d9edf7;
-}
-.bg-table-walking{
-  background-color: #dff0d8;
-}
+  .left {
+    float: none;
+  }
 
-/*
- * QR Code
- */
-#app-qr-code{
-  right:20px;
-  bottom:20px;
-  position:absolute;
-}
-#app-qr-code .qr-code-p{
-  text-align:right;
-  margin:0 20px -10px 0;
-  font-size:16px;
-}
-#app-qr-code .qr-code-img{
-  float:right;
-  width:200px;
-  height:200px;
-  margin-bottom:-20px;
-}
+  .center {
+    margin-left: auto;
+    margin-right: auto;
+    width: 90%;
+  }
 
-/*
- * Alert popup
- */
-.alert{
-  display: none;
+  #rightTab {
+    display: none;
+  }
+  #rightTab2 {
+    display: block;
+  }
+
+
 }
