--- a/public/dashboard.css
+++ b/public/dashboard.css
@@ -26,6 +26,10 @@ body {
   margin-top: 7px;
 }
 
+#h2menu2 {
+  display: none;
+}
+
 #pPick {
   font-size: 16px;
   /* color: #EB9100; */
@@ -112,6 +116,9 @@ select, option {
 
   .left {
     float: none;
+    margin-left: auto;
+    margin-right: auto;
+    width: 90%;
   }
 
   .center {
@@ -124,7 +131,6 @@ select, option {
     padding-top: 0px;
   }
 
-
   #rightTab {
     display: none;
   }
@@ -135,5 +141,14 @@ select, option {
   #butToggle {
     margin-top: 10px;
     display: block;
+  }
+
+  #h2menu {
+    display: none;
+  }
+
+  #h2menu2 {
+    display: block;
+    margin-top: 7px;
   }
 }
