ajout de bootstrap select (permet une recherche dans un select)

--- a/public/dashboard.css
+++ b/public/dashboard.css
@@ -95,6 +95,10 @@ select, option {
   font-weight: bold;
 }
 
+.selectpicker {
+  text-align: center;
+}
+
 /*
  * Leaflet map and associate buttons
  */
